--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
     </head>
 
     <body>
-        <header>
-        </header>
-
         <main>
-        </main>
+            <header>
+                <img src="/images/2.png" alt="">
+            </header>
 
-        <footer class="u-footer">
-            <div class="rodape">  <!--incompleto rodapé-->
-                <p class="copyright">&copy; Todos os direitos reservados - 2022</p>
-            </div>
-        </footer>
+            <h1>Wedding Flowers</h1>
+            <p>It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.</p>
+
+            <footer class="u-footer">
+                <div class="rodape">  <!--incompleto rodapé-->
+                    <p class="copyright">&copy; Todos os direitos reservados - 2022</p>
+                </div>
+            </footer>
+        </main>
     </body>
 </html>
