start css mobile first

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         
 
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="mobileFirst.css">
     </head>
 
     <body>
         <main>
             <header>
-                <img src="/images/2.png" alt="">
+                <img class="image-logo" src="/images/2.png" alt="logo">
+                <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
             </header>
 
             <h1>Wedding Flowers</h1>
