--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
         <main>
             <header>
-                <img class="image-logo" src="/images/2.png" alt="logo">
+                <img class="image-logo" src="/images/.png" alt="logo">
                 <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
             </header>
 
