--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@
                 </div>
             </footer>
         </main>
+
+        <script>
+            window.alert('Primeira experiência')
+            window.confirm('Está gostando de javaScript?')
+            window.prompt('Qual é o seu nome?')
+        </script>
     </body>
 </html>
