--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wedding Flowers</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicons/android-chrome-512x512.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicons/android-chrome-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicons/android-chrome-512x512.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon.ico">
         
         <link href="https://fonts.googleapis.com/css2?family=Hurricane&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,100&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="mobileFirst.css">
@@ -21,15 +22,16 @@
     <body class="u-body">
        <header>
             <div class="headername">
-                <a class="name">Wedding Flowers</a>
+                <p class="name">Wedding Flowers</p>
+                <p class="p2">photographs</p>
             </div>
         </header>
         <main> 
             <div>
-                <img class="images" src="/images/.jpg" alt="">
+                <img class="image1" src="/images/.jpg" alt="">
             </div>
             <div>
-                <img class="images" src="/images/.jpg" alt="">
+                <img class="image2" src="/images/.jpg" alt="">
             </div>
             <!-- <div class="box">
                     <img src="images/manutenção.gif" id="logo">
@@ -42,7 +44,7 @@
         </div>
             
             <div>
-                <img class="images" src="/images/1-editada.jpg" alt="">
+                <img class="image-ultima" src="/images/1-editada.jpg" alt="">
             </div>
 
         </main>
