--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </header>
         <main> 
             <div>
-                <img class="image1" src="/images/.jpg" alt="">
+                <img class="image1" src="images/.jpg" alt="">
             </div>
             <div>
-                <img class="image2" src="/images/.jpg" alt="">
+                <img class="image2" src="images/.jpg" alt="">
             </div>
             <!-- <div class="box">
                     <img src="images/manutenção.gif" id="logo">
@@ -44,7 +44,7 @@
         </div>
             
             <div>
-                <img class="image-ultima" src="/images/1-editada.jpg" alt="">
+                <img class="image-ultima" src="images/1-editada.jpg" alt="">
             </div>
 
         </main>
