CSS grid images updates

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <main> 
             <div>
                 <section class="container grid grid-template-columns-3">
-                    <div class=""><img class="image1" src="images/10-editada.jpg" alt="image"></div>
-                    <div class=""><img class="image2" src="images/11-editada.jpg" alt="image"></div>
-                    <div class=""><img class="image3" src="images/9-editada.jpg" alt="image"></div>
+                    <div class="image"><img class="image1" src="images/10-editada.jpg" alt="image"></div>
+                    <div class="image"><img class="image2" src="images/11-editada.jpg" alt="image"></div>
+                    <div class="image"><img class="image3" src="images/9-editada.jpg" alt="image"></div>
                 </section>
             </div>
             
