--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-       <!--<header>
+       <header>
            <div class="headerlogo"><img src="/images/.png" alt="logo"></div>
             <div class="headername">
                 <a class="name">Wedding Flowers</a>
@@ -27,21 +27,21 @@
         </header>
         <main> 
             <h1>Wedding Flowers</h1>
-            <p>It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.</p>-->
+            <p>It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.</p>
 
-            <div class="box">
+            <!-- <div class="box">
                 <img src="images/manutenção.gif" id="logo">
                 <div id="title">
                   SITE EM MANUTENÇÃO
                 </div>
-            </div>
+            </div>-->
         </main>
-            <!--
+            
             <footer class="u-footer">
                 <div class="rodape"> 
                     <p class="copyright">&copy; Todos os direitos reservados - 2022</p>
                 </div>
-            </footer>-->
+            </footer>
         </main>
     </body>
 </html>
