--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
         <link rel="stylesheet" href="mobileFirst.css">
     </head>
 
-    <body>
+    <body class="u-body">
        <header>
-           <div class="headerlogo"><img src="/images/.png" alt="logo"></div>
             <div class="headername">
                 <a class="name">Wedding Flowers</a>
             </div>
         </header>
         <main> 
             <h1>Wedding Flowers</h1>
-            <p>It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.</p>
 
             <!-- <div class="box">
                 <img src="images/manutenção.gif" id="logo">
@@ -35,6 +33,12 @@
                   SITE EM MANUTENÇÃO
                 </div>
             </div>-->
+            <div class="images">
+                <img src="/images/1.jpg" alt="foto">
+                <img src="/images/2.jpg" alt="">
+            </div>
+
+            <p>It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.</p>
         </main>
             
             <footer class="u-footer">
@@ -45,8 +49,6 @@
         </main>
 
         <script>
-            window.alert('Primeira experiência')
-            window.confirm('Está gostando de javaScript?')
             window.prompt('Qual é o seu nome?')
         </script>
     </body>
