--- a/index.html
+++ b/index.html
@@ -28,12 +28,27 @@
         </header>
         <main> 
             <div>
+                <section class="test">
+                    <div class="image"><img src="" alt=""></div>
+                    <div class="image"><img src="" alt=""></div>
+                    <div class="image"><img src="" alt=""></div>
+                </section>
+            </div>
+            <div>
+                <section class="test">
+                    <div class="image"><img src="" alt=""></div>
+                    <div class="image"><img src="" alt=""></div>
+                    <div class="image"><img src="" alt=""></div>
+                </section>
+            </div>
+            <div>
                 <section class="container grid grid-template-columns-3">
                     <div class="image"><img class="image1" src="images/10-editada.jpg" alt="image"></div>
                     <div class="image"><img class="image2" src="images/11-editada.jpg" alt="image"></div>
                     <div class="image"><img class="image3" src="images/9-editada.jpg" alt="image"></div>
                 </section>
             </div>
+            
             
 
                 <!-- <div class="box">
