--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <p class="name">Wedding Flowers</p>
                 <p class="p2">photographs</p>
             </div>
+            <div><img src="svg/icons8-cardápio.svg" alt=""></div>
         </header>
         <main> 
             <div>
@@ -68,6 +69,12 @@
         </main>
             
             <footer class="u-footer">
+                 <a href="https://www.instagram.com/fran.soarees/" title="Instagram"><img src="svg/icons8-instagram.svg" alt="Instagram"></a>
+
+                 <a href="https://www.facebook.com/francielle.soares.988" title="Facebook"><img src="svg/facebook-svgrepo-com.svg" alt="Facebook"></a>
+
+                 <a href="https://www.linkedin.com/in/francielle-s-ribeiro/" title="LinkedIn"><img src="svg/icons8-linkedin.svg" alt="LinkedIn"></a>
+
                 <div class="rodape"> 
                     <p class="copyright">&copy; Todos os direitos reservados - 2022</p>
                 </div>
