--- a/index.html
+++ b/index.html
@@ -21,12 +21,25 @@
 
     <body class="u-body">
        <header>
+            <details>
+                <summary></summary>
+                <nav class="menu">
+                <a href="#link">Home</a>
+                <a href="#link">Work</a>
+                <a href="#link">Links</a>
+                <a href="#link">Contact</a>
+                <a href="#link">About</a>
+                </nav>
+            </details>
+
             <div class="headername">
                 <p class="name">Wedding Flowers</p>
                 <p class="p2">photographs</p>
             </div>
-            <div><img src="svg/icons8-cardápio.svg" alt=""></div>
         </header>
+
+
+
         <main> 
             <div>
                 <section class="test">
@@ -63,7 +76,7 @@
                 </div>
                 
                 <div>
-                    <img class="image-ultima" src="images/1-editada.jpg" alt="">
+                    <img class="image-ultima" src="images/1-editada2.jpg" alt="">
                 </div>
             
         </main>
