--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <body class="u-body">
        <header id="header">
-            <!--  <div class="svg"><img class="svg-img" src="svg/icons8-cardápio.svg" alt=""></div>  -->
+         <div class="svg"><img class="svg-img" src="svg/icons8-cardápio.svg" alt=""></div> 
         
               
 
