--- a/index.html
+++ b/index.html
@@ -17,24 +17,13 @@
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="mobileFirst.css">
+        <script src="scripts.js" defer></script>
     </head>
 
     <body class="u-body">
        <header id="header">
             <!--  <div class="svg"><img class="svg-img" src="svg/icons8-cardápio.svg" alt=""></div>  -->
         
-                <a id="logo" href="">Logo</a>
-                <nav id="nav">
-                  <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
-                    <span id="hamburger"></span>
-                  </button>
-                  <ul id="menu" role="menu">
-                    <li><a href="/">Sobre</a></li>
-                    <li><a href="/">Produtos</a></li>
-                    <li><a href="/">Portfólio</a></li>
-                    <li><a href="/">Contato</a></li>
-                  </ul>
-                </nav>
               
 
             <div class="headername">
