--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Photos</a></li>
               </ul>
             </nav> 
           </div>
