--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
         <main> 
             <section>
-                <div>
-                    <div>
-                        <div>
+                <div class="container">
+                    <div class="container-1">
+                        <div class="images-first-left">
                             <div>
                                 <img src="images/4-editada.jpg" alt="image">
                             </div>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     
-                    <div>
+                    <div class="container-2">
                         <img src="images/8-editada.jpg" alt="image">
                         <p class="paragrafooo">It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.</p>
                     </div>
