images successfully updated in flex

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="container">
                     <div class="container-1">
                         <div class="images-first-left">
-                            <div>
+                            <div class="image4">
                                 <img src="images/4-editada.jpg" alt="image">
                             </div>
                             <div>
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         
-                        <div>
+                        <div class="image5">
                             <img src="images/5-editada.jpg" alt="image">
                         </div>
                     </div>
@@ -93,7 +93,7 @@
 
             <div>
                 <section class="grid grid-template-columns-3">
-                    <div class="image"><img class="image4" src="images/10-editada.jpg" alt="image"></div>
+                    <div class="image"><img class="image-4" src="images/10-editada.jpg" alt="image"></div>
                     <div class="image"><img class="image5" src="images/11-editada.jpg" alt="image"></div>
                     <div class="image"><img class="image6" src="images/9-editada.jpg" alt="image"></div>
                 </section>
