finished all part the flex

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Hurricane&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,100&display=swap" rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="mobileFirst.css">
         <script src="scripts.js" defer></script>
@@ -48,7 +52,7 @@
 
 
         <main> 
-            <section>
+            <section class="section-images">
                 <div class="container">
                     <div class="container-1">
                         <div class="images-first-left">
@@ -67,7 +71,12 @@
                     
                     <div class="container-2">
                         <img src="images/8-editada.jpg" alt="image">
-                        <p class="paragrafooo">It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.</p>
+                        <div>
+                            <h1 class="u-text">Description</h1>
+                            <p class="paragrafo">It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.
+                            </p>
+
+                        </div>
                     </div>
                 </div>
             </section>
