--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>-->
                 
 
-                <div>
+                <div class="image1">
                     <img class="image-ultima" src="images/1-editada2.jpg" alt="">
                 </div>
 
@@ -103,8 +103,8 @@
             <div>
                 <section class="grid grid-template-columns-3">
                     <div class="image"><img class="image-4" src="images/10-editada.jpg" alt="image"></div>
-                    <div class="image"><img class="image5" src="images/11-editada.jpg" alt="image"></div>
-                    <div class="image"><img class="image6" src="images/9-editada.jpg" alt="image"></div>
+                    <div class="image"><img class="image-5" src="images/11-editada.jpg" alt="image"></div>
+                    <div class="image"><img class="image-6" src="images/9-editada.jpg" alt="image"></div>
                 </section>
             </div>
         </main>
