update code footer

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 
             
             <footer class="u-footer">
-                 <a href="https://www.instagram.com/fran.soarees/" title="Instagram"><img src="svg/icons8-instagram.svg" alt="Instagram"></a>
+                 <a href="https://www.instagram.com/fran.soarees/" title="Instagram" target="_blank"><img src="svg/icons8-instagram.svg" alt="Instagram"></a>
 
-                 <a href="https://www.facebook.com/francielle.soares.988" title="Facebook"><img src="svg/facebook-svgrepo-com.svg" alt="Facebook"></a>
+                 <a href="https://www.facebook.com/francielle.soares.988" title="Facebook" target="_blank"><img src="svg/facebook-svgrepo-com.svg" alt="Facebook"></a>
 
-                 <a href="https://www.linkedin.com/in/francielle-s-ribeiro/" title="LinkedIn"><img src="svg/icons8-linkedin.svg" alt="LinkedIn"></a>
+                 <a href="https://www.linkedin.com/in/francielle-s-ribeiro/" title="LinkedIn" target="_blank"><img src="svg/icons8-linkedin.svg" alt="LinkedIn"></a>
 
                 <div class="rodape"> 
                     <p class="copyright">&copy; Todos os direitos reservados - 2022</p>
