adding responsive web design

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wedding Flowers</title>
         <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicons/android-chrome-512x512.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon.ico">
@@ -56,21 +56,21 @@
                 <div class="container">
                     <div class="container-1">
                         <div class="images-first-left">
-                            <div class="image4">
-                                <img src="images/4-editada.jpg" alt="image">
+                            <div>
+                                <img class="image4" src="images/4-editada.jpg" alt="image">
                             </div>
                             <div>
-                                <img src="images/3-editada.jpg" alt="image">
+                                <img class="image3" src="images/3-editada.jpg" alt="image">
                             </div>
                         </div>
                         
                         <div class="image5">
-                            <img src="images/5-editada.jpg" alt="image">
+                            <img class="border-image5" src="images/5-editada.jpg" alt="image">
                         </div>
                     </div>
                     
                     <div class="container-2">
-                        <img src="images/8-editada.jpg" alt="image">
+                        <img class="size-image8" src="images/8-editada.jpg" alt="image">
                         <div>
                             <h1 class="u-text">Description</h1>
                             <p class="paragrafo">It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.
