finished part mobile responsive web

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     
                     <div class="container-2">
                         <img class="size-image8" src="images/8-editada.jpg" alt="image">
-                        <div>
+                        <div class="description-text">
                             <h1 class="u-text">Description</h1>
                             <p class="paragrafo">It's easy to think that you have to hire a florist (or floral designer) to take care of all your wedding flowers, or go totally DIY. Fact check: you don't. And using a professional for some of your florals while DIYing the rest can be a great middle ground.
                             </p>
